# piecewise-functions

./: .gitignore  PiecewiseFunctions.html  PiecewiseFunctions.ipynb  README.md  build_lib.sh  conftest.py  main.py  pyproject.toml  requirements.txt
src/: PiecewiseConstantFunction.py  conftest.py
src/PiecewiseFunctions/: PiecewiseConstantFunction.py  PiecewiseFunction.py  PiecewiseLinearFunction.py  utils.py
tests/: test_bad_inputs.py  test_constant.py  test_heaviside.py  test_pcf_bad_inputs.py  test_pcf_piecewise_constant.py  test_pcf_timing.py  test_piecewise_constant.py  test_plf_bad_inputs.py  test_plf_nominal.py  test_plf_timing.py  test_sample.py
